kube/spark-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spark-worker
  labels:
    component: component-spark-worker
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: component-spark-worker
  template:
    metadata:
      labels:
        component: component-spark-worker
    spec:
      containers:
        - name: spark-worker
          image: "slateci/spark:latest"
          command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077"]
          ports:
            - containerPort: 7077
          resources:
            requests:
              cpu: 2
              memory: 2Gi
