kube/spark-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  labels:
    component: component-spark-master
spec:
  ports:
    - port: 7077
      targetPort: 7077
  selector:
    component: component-spark-master
---
apiVersion: v1
kind: Service
metadata:
  name: webui-master
  labels:
    component: component-spark-master
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: component-spark-master
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spark-master
  labels:
    component: component-spark-master
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: component-spark-master
  template:
    metadata:
      labels:
        component: component-spark-master
    spec:
      containers:
        - name: spark-master
          image: "slateci/spark:latest"
          command: ["/bin/sh","-c"]
          args: ["echo $(hostname -i) spark-master >> /etc/hosts; /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            requests:
              cpu: 2
              memory: 1Gi
